--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,18 @@
 </head>
 <body>
   <P>Welcome to the chat app!</P>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    const socket = io();
+
+    socket.on('connect', () => {
+      console.log('connected to server');
+    });
+
+    socket.on('disconnect', ()=>{
+      console.log('Disconnected from server');
+    })
+  </script>
 </body>
 </html>
