--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,6 @@
   <P>Welcome to the chat app!</P>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script>
-    const socket = io();
-
-    socket.on('connect', () => {
-      console.log('connected to server');
-    });
-
-    socket.on('disconnect', ()=>{
-      console.log('Disconnected from server');
-    })
-  </script>
+  <script src="/js/index.js"></script>
 </body>
 </html>
